--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <title></title>
- 
+
 </head>
+
 <body>
   <input type="range" value="4" id="ranger" class="control" min="4" max="35" />
   <select class="control" name="algorithms" id="algorithms">
     <option value="Bubble Sort">Bubble Sort</option>
     <option value="Selection Sort">Selection Sort</option>
     <option value="Insertion Sort">Insertion Sort</option>
+    <option value="Quick Sort">Quick Sort</option>
+    <option value="Heap Sort">Heap Sort</option>
   </select>
-   <button class="control custom_btn btn btn-primary" >Sort !</button>
+  <button class="control custom_btn btn btn-primary">Sort !</button>
   <div id="container">
   </div>
-  <script type="module" src="main.js" ></script>
+  <script type="module" src="main.js"></script>
 </body>
-</html>
 
+</html>
